--- a/Identity.Api/appsettings.Development.json
+++ b/Identity.Api/appsettings.Development.json
@@ -9,6 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=ToDo.IdentityDb;Trusted_Connection=True;"
   },
-  
-  "GrpcUsersUrl": "https://localhost:7154"
+
+  "GrpcUsersUrl": "https://localhost:7154",
+
+  "WebClientOrigin": "http://localhost:4200"
 }
