--- a/ToDo.BusinessLogic/ToDo.BusinessLogic.csproj
+++ b/ToDo.BusinessLogic/ToDo.BusinessLogic.csproj
@@ -21,4 +21,9 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
