upload pdf files in blob and view them without downloading

--- a/Document.Api/Properties/launchSettings.json
+++ b/Document.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "Pdf.Api": {
+    "Document.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchUrl": "swagger",
