--- a/Document.BusinessLogic/Document.BusinessLogic.csproj
+++ b/Document.BusinessLogic/Document.BusinessLogic.csproj
@@ -4,16 +4,16 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Pdf.BusinessLogic</RootNamespace>
+        <RootNamespace>Document.BusinessLogic</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <Folder Include="HttpClients\Models\ToDo\Request" />
-      <Folder Include="Templates" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.0" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.14.0" />
       <PackageReference Include="IdentityModel" Version="6.1.0-preview.1" />
       <PackageReference Include="itext7.pdfhtml" Version="4.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.2.0" />
@@ -24,6 +24,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Common\Common.csproj" />
+      <ProjectReference Include="..\Document.DataAccess\Document.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
