send file via email feature

--- a/Mail.Api/appsettings.Development.json
+++ b/Mail.Api/appsettings.Development.json
@@ -9,5 +9,22 @@
   "IdentitySettings": {
     "IssuerUrl": "https://localhost:7007",
     "Audience": "MailAPI"
-  }
+  },
+
+  "RabbitMQ": {
+    "Host": "localhost",
+    "Port": "5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+
+  "SmtpSettings": {
+    "UserName": "test@gamil.com",
+    "Password": "password",
+    "Port": "465",
+    "Server": "smtp.gmail.com"
+  },
+
+  "UserApiOrigin": "https://localhost:7154",
+  "DocumentApiOrigin": "https://localhost:7282"
 }
